ipc/ipdl/test/ipdl/ok/emptyStruct.ipdl
struct empty { };

protocol emptyStruct { child:  __delete__(); };
