ipc/ipdl/test/ipdl/error/spawnsNonexistent.ipdl
protocol spawnsNonexistent {
    parent spawns Nonexistent;

child: __delete__();
state DEAD: send __delete__;
};
